--- a/arch/arm64/configs/rockchip_linux_defconfig
+++ b/arch/arm64/configs/rockchip_linux_defconfig
@@ -449,6 +449,8 @@ CONFIG_CAN_CC770=m
 CONFIG_CAN_CC770_ISA=m
 CONFIG_CAN_CC770_PLATFORM=m
 CONFIG_CAN_M_CAN=m
+CONFIG_CAN_ROCKCHIP=m
+CONFIG_CANFD_ROCKCHIP=m
 CONFIG_CAN_SJA1000=m
 CONFIG_CAN_EMS_PCI=m
 CONFIG_CAN_KVASER_PCI=m
@@ -824,6 +826,8 @@ CONFIG_VIDEO_GC2093=y
 CONFIG_VIDEO_GC8034=y
 CONFIG_VIDEO_IMX219=y
 CONFIG_VIDEO_IMX415=y
+CONFIG_VIDEO_ARDUCAM_PIVARIETY=y
+CONFIG_VIDEO_IMX477=y
 CONFIG_VIDEO_IMX464=y
 CONFIG_VIDEO_OS04A10=y
 CONFIG_VIDEO_OV4689=y
@@ -1300,5 +1304,3 @@ CONFIG_RCU_CPU_STALL_TIMEOUT=60
 CONFIG_FUNCTION_TRACER=y
 CONFIG_BLK_DEV_IO_TRACE=y
 CONFIG_LKDTM=y
-CONFIG_CAN_ROCKCHIP=m
-CONFIG_CANFD_ROCKCHIP=m
