--- a/.github/workflows/build_kernel_for_openhd.yaml
+++ b/.github/workflows/build_kernel_for_openhd.yaml
@@ -21,7 +21,7 @@ jobs:
         sudo apt update
         sudo apt install -y build-essential gcc-aarch64-linux-gnu bison qemu-user-static qemu-system-arm qemu-efi u-boot-tools binfmt-support debootstrap flex libssl-dev bc rsync kmod cpio xz-utils fakeroot 
         sudo apt install -y parted udev dosfstools uuid-runtime git-lfs device-tree-compiler python2 python3 python-is-python3 fdisk bc
-        # only needed for build_image
+        # only needed for build_legacy_kernel
         sudo apt install -y device-tree-compiler libncurses5 libncurses5-dev build-essential libssl-dev mtools bc python dosfstools bison flex rsync u-boot-tools make
 
     - name: clone drivers into kernel
@@ -50,7 +50,7 @@ jobs:
         cd ../../../
         ls -a
 
-    - name: build legycy kernel
+    - name: build legacy kernel
       run: |
         mkdir rk3588-sdk 
         mkdir -p rk3588-sdk/kernel
