--- a/.github/workflows/build_kernel_for_openhd.yaml
+++ b/.github/workflows/build_kernel_for_openhd.yaml
@@ -54,7 +54,7 @@ jobs:
       run: |
         mkdir rk3588-sdk 
         mkdir -p rk3588-sdk/kernel
-        mv * rk3588-sdk/kernel/
+        mv RK_Kernel/* rk3588-sdk/kernel/
         cd rk3588-sdk
         git clone -b master https://github.com/radxa/rkbin.git
         git clone -b debian https://github.com/radxa/build.git
