--- a/.github/workflows/build_kernel_for_openhd.yaml
+++ b/.github/workflows/build_kernel_for_openhd.yaml
@@ -23,7 +23,8 @@ jobs:
         sudo apt install -y parted udev dosfstools uuid-runtime git-lfs device-tree-compiler python2 python3 python-is-python3 fdisk bc
         # only needed for build_legacy_kernel
         sudo apt install -y device-tree-compiler libncurses5 libncurses5-dev build-essential libssl-dev mtools bc dosfstools bison flex rsync u-boot-tools make
-
+        sudo apt-get install gcc-aarch64-linux-gnu # GNU C compiler for the arm64 architecture
+        sudo apt-get install g++-aarch64-linux-gnu # GNU C++ compiler
     - name: clone drivers into kernel
       run: |
         mkdir workdir
