--- a/.github/workflows/build_kernel_for_openhd.yaml
+++ b/.github/workflows/build_kernel_for_openhd.yaml
@@ -23,8 +23,8 @@ jobs:
         sudo apt install -y parted udev dosfstools uuid-runtime git-lfs device-tree-compiler python2 python3 python-is-python3 fdisk bc
         # only needed for build_legacy_kernel
         sudo apt install -y device-tree-compiler libncurses5 libncurses5-dev build-essential libssl-dev mtools bc dosfstools bison flex rsync u-boot-tools make
-        sudo apt-get install gcc-aarch64-linux-gnu # GNU C compiler for the arm64 architecture
-        sudo apt-get install g++-aarch64-linux-gnu # GNU C++ compiler
+        sudo apt-get install -y gcc-aarch64-linux-gnu # GNU C compiler for the arm64 architecture
+        sudo apt-get install -y g++-aarch64-linux-gnu # GNU C++ compiler
     - name: clone drivers into kernel
       run: |
         mkdir workdir
@@ -60,6 +60,8 @@ jobs:
         cd rk3588-sdk
         git clone -b master https://github.com/radxa/rkbin.git
         git clone -b debian https://github.com/radxa/build.git
+        aarch64-linux-gnu-gcc --version
+        export CROSS_COMPILE=aarch64-linux-gnu-
         sudo ./build/mk-kernel.sh rk3588-rock-5b
         sudo ./build/pack-kernel.sh -d rockchip_linux_defconfig -r 99
 
