--- a/.github/workflows/build_kernel_for_openhd.yaml
+++ b/.github/workflows/build_kernel_for_openhd.yaml
@@ -49,25 +49,24 @@ jobs:
         cd ../../../
         ls -a
 
-    # - name: build legacy kernel
-    #   run: |
-    #     cd ..
-    #     mkdir rk3588-sdk 
-    #     mkdir -p rk3588-sdk/kernel
-    #     mv RK_Kernel/* rk3588-sdk/kernel/
-    #     cd rk3588-sdk
-    #     git clone -b master https://github.com/radxa/rkbin.git
-    #     git clone -b debian https://github.com/radxa/build.git
-    #     export CROSS_COMPILE=aarch64-linux-gnu-
-    #     sudo ./build/mk-kernel.sh rk3588-rock-5b
-    #     sudo ./build/pack-kernel.sh -d rockchip_linux_defconfig -r 99
-
-    - name: build kernel
+    - name: build legacy kernel
       run: |
-        dpkg-buildpackage -a "$(cat debian/arch)" -d -b -nc -uc
-        ls -a ../
-        cd .. 
-        cp *.deb RK_Kernel/
+        cd ..
+        mkdir rk3588-sdk 
+        mkdir -p rk3588-sdk/kernel
+        git clone -b dev-rkr3.4 https://github.com/ArduCAM/RK_Kernel.git kernel        cd rk3588-sdk
+        git clone -b master https://github.com/radxa/rkbin.git
+        git clone -b debian https://github.com/radxa/build.git
+        export CROSS_COMPILE=aarch64-linux-gnu-
+        sudo ./build/mk-kernel.sh rk3588-rock-5b
+        sudo ./build/pack-kernel.sh -d rockchip_linux_defconfig -r 99
+
+    # - name: build kernel
+    #   run: |
+    #     dpkg-buildpackage -a "$(cat debian/arch)" -d -b -nc -uc
+    #     ls -a ../
+    #     cd .. 
+    #     cp *.deb RK_Kernel/
   
     - name: Upload to Github
       uses: 'actions/upload-artifact@v2'
