--- a/.github/workflows/build_kernel_for_openhd.yaml
+++ b/.github/workflows/build_kernel_for_openhd.yaml
@@ -53,7 +53,7 @@ jobs:
       run: |
         cd ..
         mkdir rk3588-sdk 
-        mkdir -p rk3588-sdk/kernel
+#        mkdir -p rk3588-sdk/kernel
         git clone -b dev-rkr3.4 https://github.com/ArduCAM/RK_Kernel.git kernel        
         cd rk3588-sdk
         git clone -b master https://github.com/radxa/rkbin.git
