--- a/.github/workflows/build_kernel_for_openhd.yaml
+++ b/.github/workflows/build_kernel_for_openhd.yaml
@@ -9,6 +9,8 @@ env:
 jobs:
   build:
     runs-on: ubuntu-22.04
+    container:
+      image: docker://debian:bullseye
     env:
       CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
     steps:
