--- a/.github/workflows/build_kernel_for_openhd.yaml
+++ b/.github/workflows/build_kernel_for_openhd.yaml
@@ -14,6 +14,10 @@ jobs:
     env:
       CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
     steps:
+    - name: install dependencies for git
+      run: |
+        sudo apt update
+        sudo apt install -y git
     - uses: actions/checkout@v3
       with:
         submodules: recursive
