--- a/.github/workflows/build_kernel_for_openhd.yaml
+++ b/.github/workflows/build_kernel_for_openhd.yaml
@@ -16,14 +16,15 @@ jobs:
     steps:
     - name: install dependencies for git
       run: |
-        sudo apt update
-        sudo apt install -y git
+        apt update
+        apt install -y git sudo
     - uses: actions/checkout@v3
       with:
         submodules: recursive
 
     - name: install dependencies
       run: |
+        sudo apt install sudo
         sudo apt update
         sudo apt install -y build-essential gcc-aarch64-linux-gnu bison qemu-user-static qemu-system-arm qemu-efi u-boot-tools binfmt-support debootstrap flex libssl-dev bc rsync kmod cpio xz-utils fakeroot 
         sudo apt install -y parted udev dosfstools uuid-runtime git-lfs device-tree-compiler python2 python3 python-is-python3 fdisk bc
