just .. do it this way

--- a/.github/workflows/build_kernel_for_openhd.yaml
+++ b/.github/workflows/build_kernel_for_openhd.yaml
@@ -61,7 +61,7 @@ jobs:
         cd ..
         mkdir rk3588-sdk 
         cd rk3588-sdk
-        git clone -b dev-rkr3.4 https://github.com/ArduCAM/RK_Kernel.git kernel        
+        git clone -b dev-rkr3.4 https://github.com/openhd/RK_Kernel.git kernel        
         git clone -b master https://github.com/radxa/rkbin.git
         git clone -b debian https://github.com/radxa/build.git
         export CROSS_COMPILE=aarch64-linux-gnu-
