--- a/.github/workflows/build_kernel_for_openhd.yaml
+++ b/.github/workflows/build_kernel_for_openhd.yaml
@@ -12,6 +12,11 @@ jobs:
     env:
       CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
     steps:
+
+    - uses: actions/checkout@v3
+      with:
+        submodules: recursive
+
     - name: install dependencies
       run: |
         sudo apt update
@@ -24,7 +29,7 @@ jobs:
         sudo tar zxvf gcc-arm-10.3-2021.07-x86_64-aarch64-none-linux-gnu.tar.gz -C /usr/local/
         export PATH="/usr/local/gcc-arm-10.3-2021.07-x86_64-aarch64-none-linux-gnu/linux-x86/aarch64/gcc-arm-10.3-2021.07-x86_64-aarch64-none-linux-gnu/bin:$PATH"
         source ~/.bashrc
-        
+
     # - name: clone drivers into kernel
     #   run: |
     #     mkdir workdir
@@ -55,8 +60,9 @@ jobs:
       run: |
         cd ..
         mkdir rk3588-sdk 
+        mkdir -p rk3588-sdk/kernel
+        mv RK_Kernel/* rk3588-sdk/kernel/
         cd rk3588-sdk
-        git clone -b dev-rkr3.4 https://github.com/openhd/RK_Kernel.git kernel        
         git clone -b master https://github.com/radxa/rkbin.git
         git clone -b debian https://github.com/radxa/build.git
         export CROSS_COMPILE=aarch64-linux-gnu-
