--- a/.github/workflows/build_kernel_for_openhd.yaml
+++ b/.github/workflows/build_kernel_for_openhd.yaml
@@ -65,7 +65,7 @@ jobs:
         mv RK_Kernel/* rk3588-sdk/kernel/
         cd rk3588-sdk
         git clone -b master https://github.com/radxa/rkbin.git
-        git clone -b debian https://github.com/openhd/buildrk3558.git build
+        git clone -b debian https://github.com/radxa/build.git
         sudo ./build/mk-kernel.sh rk3588-rock-5b
         sudo ./build/pack-kernel.sh -d rockchip_linux_defconfig -r 99
 
