--- a/.github/workflows/build_kernel_for_openhd.yaml
+++ b/.github/workflows/build_kernel_for_openhd.yaml
@@ -19,11 +19,15 @@ jobs:
 
     - name: install dependencies
       run: |
-        sudo apt update
-        # only needed for build_legacy_kernel
-        #sudo apt install -y binutils-aarch64-linux-gnu gcc-aarch64-linux-gnu device-tree-compiler libncurses5 libncurses5-dev build-essential libssl-dev mtools bc dosfstools bison flex rsync u-boot-tools make
-        sudo apt install -y  build-essential crossbuild-essential-arm64 gcc-arm-none-eabi git u-boot-tools cpio multipath-tools jq bison flex libssl-dev python2 ruby swig python2-dev minicom
-    # - name: link and install compiler
+        dpkg --add-architecture arm64
+        apt-get update
+        apt-get full-upgrade --no-install-recommends build-essential crossbuild-essential-arm64 gcc-arm-none-eabi git ruby sudo apt-utils python3 python2 python-is-python2 curl debhelper python3-distutils python3-pkg-resources python3-setuptools python3-pyelftools python3-ply python3-git \
+        cpio bc flex fakeroot bison rsync kmod swig device-tree-compiler u-boot-tools python2-dev python3-dev libssl-dev uuid-dev libgnutls28-dev libc6:arm64 libssl-dev:arm64 
+        gem install fpm
+        curl https://bootstrap.pypa.io/pip/2.7/get-pip.py | python2
+        python2 -m pip install pyelftools
+        adduser --gecos runner --disabled-password runner
+        rm -rf /var/lib/apt/lists/* # - name: link and install compiler
     #   run: |
     #     echo $USER
     #     wget https://dl.radxa.com/tools/linux/gcc-arm-10.3-2021.07-x86_64-aarch64-none-linux-gnu.tar.gz
