--- a/.github/workflows/build_kernel_for_openhd.yaml
+++ b/.github/workflows/build_kernel_for_openhd.yaml
@@ -67,8 +67,9 @@ jobs:
         cd ..
         mkdir rk3588-sdk 
         mkdir -p rk3588-sdk/kernel
-        mv RK_Kernel/* rk3588-sdk/kernel/
+        #mv RK_Kernel/* rk3588-sdk/kernel/
         cd rk3588-sdk
+        git clone https://github.com/radxa/kernel
         git clone -b master https://github.com/radxa/rkbin.git
         git clone -b debian https://github.com/radxa/build.git
         sudo ./build/mk-kernel.sh rk3588-rock-5b
