--- a/.github/workflows/build_kernel_for_openhd.yaml
+++ b/.github/workflows/build_kernel_for_openhd.yaml
@@ -9,8 +9,6 @@ env:
 jobs:
   build:
     runs-on: ubuntu-22.04
-    container:
-      image: docker://debian:bullseye
     env:
       CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
     steps:
@@ -54,8 +52,8 @@ jobs:
 
     - name: build legacy kernel
       run: |
-        apt update
-        apt install git
+        sudo apt update
+        sudo apt install -y git
         git clone https://github.com/OpenHD/ChrootCompilationTest /opt/ChrootCompilationTest
         mkdir -p /opt/ChrootCompilationTest/additionalFiles
         git clone https://github.com/OpenHD/OpenHD -b 2.4-evo /opt/ChrootCompilationTest/additionalFiles/ --recursive
@@ -64,8 +62,8 @@ jobs:
         echo "jammy" > /opt/ChrootCompilationTest/additionalFiles/flavor.txt
         cd /opt/ChrootCompilationTest/
         apt update
-        bash install_dep.sh
-        bash build.sh rock5 $API_KEY debian bullseye
+        sudo bash install_dep.sh
+        sudo bash build.sh rock5 $API_KEY debian bullseye
 
     # - name: build kernel
     #   run: |
