--- a/.github/workflows/build_kernel_for_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_openhd_crosscompile.yaml
@@ -32,8 +32,8 @@ jobs:
     #     cat ~/.bashrc
     #     sudo rm -Rf /usr/local/gcc-arm-10.3-2021.07-x86_64-aarch64-none-linux-gnu/linux-x86/aarch64/gcc-arm-10.3-2021.07-x86_64-aarch64-none-linux-gnu/bin/aarch64-rockchip1031*
     #     ls /usr/local/gcc-arm-10.3-2021.07-x86_64-aarch64-none-linux-gnu/linux-x86/aarch64/gcc-arm-10.3-2021.07-x86_64-aarch64-none-linux-gnu/bin
-    # - name: clone drivers into kernel
-    #   run: |
+    - name: clone drivers into kernel
+      run: |
         mkdir workdir
         cd workdir
         git clone https://github.com/OpenHD/rtl8812au -b rockchip
