--- a/.github/workflows/build_kernel_for_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_openhd_crosscompile.yaml
@@ -60,6 +60,7 @@ jobs:
 
     - name: build legacy kernel
       run: |
+        sudo apt-get update
         sudo dpkg --add-architecture arm64
         sudo apt-get update
         sudo apt-get full-upgrade --no-install-recommends -y build-essential crossbuild-essential-arm64 gcc-arm-none-eabi git ruby sudo apt-utils python3 python2 python-is-python2 curl debhelper python3-distutils python3-pkg-resources python3-setuptools python3-pyelftools python3-ply python3-git cpio bc flex fakeroot bison rsync kmod swig device-tree-compiler u-boot-tools python2-dev python3-dev libssl-dev uuid-dev libgnutls28-dev libc6:arm64 libssl-dev:arm64
