--- a/.github/workflows/build_kernel_for_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_openhd_crosscompile.yaml
@@ -10,7 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-22.04
     container:
-      image: ghcr.io/debian/bullseye
+      image: debian:bullseye
     env:
       CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
     steps:
