--- a/.github/workflows/build_kernel_for_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_openhd_crosscompile.yaml
@@ -56,13 +56,13 @@ jobs:
         apt-get update
         dpkg --add-architecture arm64
         apt-get update
-        apt-get full-upgrade --no-install-recommends -y build-essential crossbuild-essential-arm64 gcc-arm-none-eabi git ruby sudo apt-utils python3 python2 python-is-python2 curl debhelper python3-distutils python3-pkg-resources python3-setuptools python3-pyelftools python3-ply python3-git cpio bc flex fakeroot bison rsync kmod swig device-tree-compiler u-boot-tools python2-dev python3-dev libssl-dev uuid-dev libgnutls28-dev libc6:arm64 libssl-dev:arm64
+        apt-get full-upgrade --no-install-recommends -y wget build-essential crossbuild-essential-arm64 gcc-arm-none-eabi git ruby sudo apt-utils python3 python2 python-is-python2 curl debhelper python3-distutils python3-pkg-resources python3-setuptools python3-pyelftools python3-ply python3-git cpio bc flex fakeroot bison rsync kmod swig device-tree-compiler u-boot-tools python2-dev python3-dev libssl-dev uuid-dev libgnutls28-dev libc6:arm64 libssl-dev:arm64
         gem install fpm
         curl https://bootstrap.pypa.io/pip/2.7/get-pip.py | python2
         python2 -m pip install pyelftools
         apt-get install --no-install-recommends -y qemu-user-static binfmt-support
 
-    - name: install dependencies
+    - name: compile
       run: |
         git clone https://github.com/openhd/RK_Kernel
         cd RK_Kernel
