--- a/.github/workflows/build_kernel_for_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_openhd_crosscompile.yaml
@@ -64,8 +64,9 @@ jobs:
 
     - name: compile
       run: |
-        git clone https://github.com/openhd/RK_Kernel --depth=1 --recursive
+        git clone --recursive https://github.com/openhd/RK_Kernel 
         cd RK_Kernel
+        ls -a drivers/net/wireless/realtek/rtl88x2bu/
         wget https://releases.linaro.org/components/toolchain/binaries/7.3-2018.05/aarch64-linux-gnu/gcc-linaro-7.3.1-2018.05-x86_64_aarch64-linux-gnu.tar.xz
         tar xvf gcc-linaro-7.3.1-2018.05-x86_64_aarch64-linux-gnu.tar.xz  -C /usr/local/
         apt-get -y install gcc-aarch64-linux-gnu device-tree-compiler libncurses5 libncurses5-dev build-essential libssl-dev mtools
