--- a/drivers/net/wireless/rtl8812bu/Kconfig
+++ b/drivers/net/wireless/rtl8812bu/Kconfig
@@ -1,6 +1,5 @@
 config RTL8822BU
 	tristate "Realtek 8822B USB WiFi"
 	depends on USB
-	---help---
-	  Help message of RTL8822BU
-
+	help
+	  Help message of RTL8822B
